# event-driven-smart-lab-node

./: .gitignore  CMakeLists.txt  LICENSE  README.md
components/dht11/: CMakelists.txt  dht11.c  idf_component.yml
components/dht11/include/: dht11.h
components/dht11_wrapper/: CMakelists.txt  dht11_wrapper.c  dht11_wrapper.h
components/door_sensor_wrapper/: CMakeLists.txt  door_sensor_wrapper.c  door_sensor_wrapper.h
components/mqtt_manager/: CMakeLists.txt  mqtt_manager.c  mqtt_manager.h
components/wifi_manager/: CMakeLists.txt  wifi_manager.c  wifi_manager.h
docs/: Milestone 3  Milestone 4  Milestone 5
main/: CMakeLists.txt  main.c
